--- a/.config
+++ b/.config
@@ -5522,7 +5522,7 @@ CONFIG_PACKAGE_v2ray-plugin=m
 # CONFIG_PACKAGE_v2raya is not set
 # CONFIG_V2RAYA_COMPRESS_GOPROXY is not set
 # CONFIG_V2RAYA_COMPRESS_UPX is not set
-# CONFIG_PACKAGE_xray-plugin is not set
+CONFIG_PACKAGE_xray-plugin=m
 # CONFIG_XRAY_PLUGIN_COMPRESS_GOPROXY is not set
 # CONFIG_XRAY_PLUGIN_COMPRESS_UPX is not set
 # end of Web Servers/Proxies
